css added on header

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
             <img class="logo" src="img/lambda-black.png" alt="Company logo.">
             <nav>
-                <a class="class-a" href="">Home</a>
-                <a class="class-a" href="about.html">About</a>
-                <a class="class-a" href="extrapage.html">Products</a>
-                <a class="class-a" href="">Blog</a>
-                <a class="class-a" href="contact.html">Contact</a>
+                <a href="">Home</a>
+                <a href="about.html">About</a>
+                <a href="extrapage.html">Products</a>
+                <a href="">Blog</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </header>
 
