linking the home nav item with index page and creating two exta page in the navigation bar

--- a/about.html
+++ b/about.html
@@ -20,10 +20,10 @@
             <img class="logo" src="img/lambda-black.png" alt="Company logo.">
             <nav>
                 <a href="">Home</a>
-                <a href="about.html">About</a>
-                <a href="extrapage.html">Products</a>
+                <a href="index.html">About</a>
+                <a href="">Products</a>
                 <a href="">Blog</a>
-                <a href="contact.html">Contact</a>
+                <a href="">Contact</a>
             </nav>
         </header>
 
