added css style on the about page layout

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </nav>
         </header>
 
-        <img class="logo" src="img/jumbo.jpg" alt="Company logo.">
+        <img class="banner" src="img/jumbo.jpg" alt="Company logo.">
 
         <section class="top-content">
             <div class="text-container">
