--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
             </nav>
         </header>
 
-        <img class="logo" src="img/jumbo-about.png" alt="Company logo.">
+        <img class="banner" src="img/jumbo-about.png" alt="Company logo.">
 
         <section class="section-one">
             <h1>About</h1>
