--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                 <a href="index.html">About</a>
                 <a href="">Products</a>
                 <a href="">Blog</a>
-                <a href="">Contact</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </header>
 
