final version for lambda challenge

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <nav>
                 <a href="">Home</a>
                 <a href="index.html">About</a>
-                <a href="">Products</a>
+                <a href="extrapage.html">Products</a>
                 <a href="">Blog</a>
                 <a href="contact.html">Contact</a>
             </nav>
